<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".SetGoalActivity">

    <TextView
        android:id="@+id/txtSetGoalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtSetGoalTitle"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWeekStarts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:text="@string/txtWeekStarts"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSetGoalTitle" />

    <Spinner
        android:id="@+id/txtWeekGroup"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/txtWeekGroup"
        android:minHeight="48dp"
        android:prompt="@string/prompt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeekStarts" />

    <EditText
        android:id="@+id/editTxtTrainigDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/trainingDays"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeekGroup" />

    <TextView
        android:id="@+id/txtWeeklyGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="250dp"
        android:text="@string/txtWeeklyGoal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTrainigDays" />

    <Spinner
        android:id="@+id/txtGoalsGroup"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/txtGoalsGroup"
        android:minHeight="48dp"
        android:prompt="@string/prompt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeeklyGoal" />

    <RadioGroup
        android:id="@+id/radGroupEatingHabits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtGoalsGroup" >

        <TextView
            android:id="@+id/txtEatingHabits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEatingHabits"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rad2times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad2times"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rad3times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad3times"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rad6times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad6times"
            android:textSize="15sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSetGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSetGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radGroupEatingHabits" />
</androidx.constraintlayout.widget.ConstraintLayout>