<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".UserInfoActivity">

    <TextView
        android:id="@+id/txtMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtMoreInfo"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMoreInfo"
        tools:ems="10"
        tools:textSize="20dp" />

    <EditText
        android:id="@+id/editTxtHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtAge" />

    <EditText
        android:id="@+id/editTxtWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtHeight" />

    <RadioGroup
        android:id="@+id/radGroupWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTxtWeight">

        <TextView
            android:id="@+id/txtHowOften"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oftenWorkout"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:textAlignment="center" />

        <RadioButton
            android:id="@+id/rad5_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad5_7"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rad3_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad3_4"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rad1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad1_2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radHaveNotTrained"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radHaveNotTrained"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmitInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnSubmitInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radGroupWorkouts" />

</androidx.constraintlayout.widget.ConstraintLayout>