<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="10dp"
android:orientation="vertical"
tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="391dp"
        android:layout_height="99dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/registerlogo" />


<EditText
    android:id="@+id/editTextName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:ems="10"
    android:textAlignment="center"
    android:textSize="20sp"
    android:textStyle="italic"
    android:hint="@string/name"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/editTextLname"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView6" />


<EditText
    android:id="@+id/editTextLname"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:ems="10"
    android:textAlignment="center"
    android:textSize="20sp"
    android:textStyle="italic"
    android:hint="@string/last_name"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextName" />


<EditText
    android:id="@+id/editTextEmail"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:ems="10"
    android:textAlignment="center"
    android:textSize="20sp"
    android:textStyle="italic"
    android:hint="@string/email_address"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextLname" />


<RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:gravity="center"
    android:orientation="horizontal"
    app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextEmail">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/gender" />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/female" />

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/radioOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/other" />
</RadioGroup>


<EditText
    android:id="@+id/editTextNumberPassword"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="35dp"
    android:ems="10"
    android:textAlignment="center"
    android:textSize="20sp"
    android:textStyle="italic"
    android:hint="@string/password"
    android:inputType="textPassword"
    app:layout_constraintBottom_toTopOf="@+id/submitBttn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

<Button
    android:id="@+id/submitBttn"
    android:layout_width="167dp"
    android:layout_height="48dp"
    android:layout_marginTop="20dp"
    android:text="@string/submit"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>